Issue #94 Add job for each stage and specify as only: external-e Original/build commit ID: aa6b6ceffb74bf386b1679f06e040cffc2cb814b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,18 @@
 
-
 stages:
   - Code Check
   - Build
   - Smoke Tests
+
+Code Check:
+  stage: Code Check
+  only: external
+
+Build:
+  stage: Build
+  only: external
+
+Smoke Tests:
+  stage: Smoke Tests
+  only: external
 
