--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-
 stages:
   - Code Check
   - Build
@@ -7,12 +6,16 @@ stages:
 Code Check:
   stage: Code Check
   only: external
+  script: echo 1
 
 Build:
   stage: Build
   only: external
+  script: echo 1
 
 Smoke Tests:
   stage: Smoke Tests
   only: external
+  script: echo 1
+  
 
