Issue #94 Convert 'only' gitlab CI to hash-e Original/build commit ID: abc18baa70a0fb74df6dfb8a292d5c3be1bf335b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,17 +5,20 @@ stages:
 
 Code Check:
   stage: Code Check
-  only: external
+  only:
+    - external
   script: echo 1
 
 Build:
   stage: Build
-  only: external
+  only:
+    - external
   script: echo 1
 
 Smoke Tests:
   stage: Smoke Tests
-  only: external
+  only:
+    - external
   script: echo 1
   
 
