Ignore further VS files -e Original/build commit ID: 4a9f7901c09783c535c25c3a54f503ee67bbdd32

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ stickrpg.vcxproj
 stickrpg.vcxproj.filters
 stickrpg.vcxproj.user
 stickrpg.workspace
+*.log
+stickrpg.Build.CppClean.log
+stickrpg.lastbuildstate
+stickrpg.log
