Issue #77 Update codequality path to check code-e Original/build commit ID: 8b5d40c5a636a19a3df5163dbe66916e86def8d7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ code_quality:
         ) \
         --volume "$PWD":/code \
         --volume /var/run/docker.sock:/var/run/docker.sock \
-        "$CODE_QUALITY_IMAGE" /code
+        "$CODE_QUALITY_IMAGE" /code/games/stickrpg
   artifacts:
     reports:
       codequality: gl-code-quality-report.json
