--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,52 +1,7 @@
-code_quality:
-  stage: test
-  image: fare-docker-reg.dock.studios:5000/gitlab-org/docker:19.03.12
-  allow_failure: true
-  services:
-    - docker:19.03.12-dind
-  variables:
-    DOCKER_DRIVER: overlay2
-    DOCKER_TLS_CERTDIR: ""
-    CODE_QUALITY_IMAGE: "fare-docker-reg.dock.studios:5000/gitlab-org/ci-cd/codequality:0.85.26"
-  needs: []
-  script:
-    - export SOURCE_CODE=$PWD
-    - |
-      if ! docker info &>/dev/null; then
-        if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
-          export DOCKER_HOST='tcp://localhost:2375'
-        fi
-      fi
-    - | # this is required to avoid undesirable reset of Docker image ENV variables being set on build stage
-      function propagate_env_vars() {
-        CURRENT_ENV=$(printenv)
 
-        for VAR_NAME; do
-          echo $CURRENT_ENV | grep "${VAR_NAME}=" > /dev/null && echo "--env $VAR_NAME "
-        done
-      }
-    - docker pull --quiet "$CODE_QUALITY_IMAGE"
-    - |
-      docker run --rm \
-        $(propagate_env_vars \
-          TIMEOUT_SECONDS \
-          CODECLIMATE_DEBUG \
-          CODECLIMATE_DEV \
-          REPORT_STDOUT \
-          REPORT_FORMAT \
-          ENGINE_MEMORY_LIMIT_BYTES \
-          CODECLIMATE_PREFIX \
-        ) \
-        -e SOURCE_CODE=/code/games/stickrpg \
-        -e CODECLIMATE_DEBUG=1 \
-        --volume "$PWD":/code \
-        "$CODE_QUALITY_IMAGE" /code
-  artifacts:
-    reports:
-      codequality: gl-code-quality-report.json
-    expire_in: 1 week
-  dependencies: []
-  rules:
-    - if: '$CODE_QUALITY_DISABLED'
-      when: never
-    - if: '$CI_COMMIT_TAG || $CI_COMMIT_BRANCH'
+cppcheck:
+  stage: test
+  allow_failure: true
+  image: registry.gitlab.dockstudios.co.uk/pub/docker-images/cpp-static-code-analysis:latest
+  script:
+    - cppcheck --enable=all --error-exitcode=1 ./games/stickrpg
