Issue #77 Update to use custom cpp-static-code-analysis image and run cppcheck-e Original/build commit ID: 5bbb674aa3400614b15d970810568b03e9d2e446

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,4 +4,4 @@ cppcheck:
   allow_failure: true
   image: registry.gitlab.dockstudios.co.uk/pub/docker-images/cpp-static-code-analysis:latest
   script:
-    - cppcheck --enable=all --error-exitcode=1 ./games/stickrpg
+    - cppcheck --enable=all --error-exitcode=1 --std=c98 -I ./include ./games/stickrpg
