--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,11 @@ cppcheck:
   image: registry.gitlab.dockstudios.co.uk/pub/docker-images/cpp-static-code-analysis:latest
   script:
     - cppcheck --enable=all --error-exitcode=1 --std=c99 -I ./include ./games/stickrpg
+
+
+semgrep:
+  stage: test
+  allow_failure: true
+  image: fare-docker-reg.dock.studios:5000/returntocorp/semgrep:latest
+  script:
+    - semgrep --config=auto --error --strict --json games/stickrpg
