--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,4 @@ semgrep:
   allow_failure: true
   image: fare-docker-reg.dock.studios:5000/returntocorp/semgrep:latest
   script:
-    - semgrep --config=auto --error --strict --json games/stickrpg
+    - semgrep --error --strict --json games/stickrpg
