Issue #77 Use --metrics=off in semgrep-e Original/build commit ID: 2f18d8fd3200c6bcbee6bf527678be32fa267167

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,4 +12,4 @@ semgrep:
   allow_failure: true
   image: fare-docker-reg.dock.studios:5000/returntocorp/semgrep:latest
   script:
-    - semgrep games/stickrpg
+    - semgrep --metrics=off games/stickrpg
