--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,21 @@ cppcheck:
     - cppcheck --suppress=unusedFunction --suppress=unusedStructMember --enable=all --error-exitcode=1 --std=c99 -I ./include ./games/stickrpg
 
 
-semgrep:
+sonarqube:
   stage: test
-  allow_failure: true
-  image: fare-docker-reg.dock.studios:5000/returntocorp/semgrep:latest
+  image:
+    name: registry.gitlab.dockstudios.co.uk/pub/docker-images/sonarcanner-cli:ubuntu-20.04
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
   script:
-    - semgrep --metrics=off games/stickrpg
+    - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=StickGBC -Dsonar.sources=. -Dsonar.host.url=http://sonarqube.dock.studios -Dsonar.login=$SONAR_KEY
+  only:
+    - merge_requests
+    - master
+
