Issue #77 Add sonarqube includes and set code path-e Original/build commit ID: 1a2874369a28acace2197f0f01dddb5e3fabdcfa

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ sonarqube:
     paths:
       - .sonar/cache
   script:
-    - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=StickGBC -Dsonar.sources=. -Dsonar.host.url=http://sonarqube.dock.studios -Dsonar.login=$SONAR_KEY
+    - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.projectKey=StickGBC -Dsonar.sources=games/stickrpg -Dsonar.c.includeDirectories=./include -Dsonar.host.url=http://sonarqube.dock.studios -Dsonar.login=$SONAR_KEY
   only:
     - merge_requests
     - master
