--- a/.gitignore
+++ b/.gitignore
@@ -8,19 +8,62 @@ gc.log
 .codelite
 
 # VS
-Demo
-stickrpg.ncb
-stickrpg.opensdf
-stickrpg.sdf
-stickrpg.sln
-stickrpg.suo
-stickrpg.vcproj
-stickrpg.vcproj.MATT-433105D297.Matt.user
-stickrpg.vcxproj
-stickrpg.vcxproj.filters
-stickrpg.vcxproj.user
-stickrpg.workspace
+#
+# Windows and Mac OS X Temp Cache Files
+#
+[Tt]humbs.db
+*.DS_Store
+ 
+#
+#Visual Studio files
+#
+*.[Oo]bj
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
 *.log
-stickrpg.Build.CppClean.log
-stickrpg.lastbuildstate
-stickrpg.log
+*.lib
+*.sbr
+*.sdf
+ipch/
+obj/
+[Bb]in
+[Dd]ebug*/
+[Rr]elease*/
+ 
+#
+#Tooling
+#
+_ReSharper*/
+*.resharper
+[Tt]est[Rr]esult*
+ 
+#
+#Project files
+#
+[Bb]uild/
+ 
+#
+#Subversion files
+#
+.svn
+ 
+#
+# Microsoft Office Temp Files
+#
+~$*
+ 
+# End of File
+Demo
+*.log
